# cobra-map-editor

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
cmake/: config-config.cmake  git.cmake
data/: 2c-Tiny_VautEdition.wz  blbrbgen.pie  discard_alpha.fs
src/: config.cpp  config.h  main.cpp  maplibshiz.cpp  maplibshiz.h  misc.cpp  misc.h  pie.cpp  pie.h  resources.cpp  resources.h  textures.cpp  textures.h  world.cpp  world.h
